--- a/dvc/training/checkpoints/.gitignore
+++ b/dvc/training/checkpoints/.gitignore
@@ -88,3 +88,28 @@
 /pc-L5-apical-graph-rd-gnn-stratified-k-fold
 /in-L1-axon-image-tmd-rd-cnn-stratified-k-fold
 /in-L5-axon-image-tmd-rd-cnn-stratified-k-fold
+/in-L1-axon-diagram-tmd-proj-perslay-stratified-k-fold
+/in-L1-axon-graph-proj-gnn-stratified-k-fold
+/in-L1-axon-image-tmd-proj-cnn-stratified-k-fold
+/in-L1-axon-image-tmd-proj-decision-tree-stratified-k-fold
+/in-L1-axon-image-tmd-proj-xgb-stratified-k-fold
+/in-L23-axon-diagram-tmd-proj-perslay-stratified-k-fold
+/in-L23-axon-graph-proj-gnn-stratified-k-fold
+/in-L23-axon-image-tmd-proj-cnn-stratified-k-fold
+/in-L23-axon-image-tmd-proj-decision-tree-stratified-k-fold
+/in-L23-axon-image-tmd-proj-xgb-stratified-k-fold
+/in-L4-axon-diagram-tmd-proj-perslay-stratified-k-fold
+/in-L4-axon-graph-proj-gnn-stratified-k-fold
+/in-L4-axon-image-tmd-proj-cnn-stratified-k-fold
+/in-L4-axon-image-tmd-proj-decision-tree-stratified-k-fold
+/in-L4-axon-image-tmd-proj-xgb-stratified-k-fold
+/in-L5-axon-diagram-tmd-proj-perslay-stratified-k-fold
+/in-L5-axon-graph-proj-gnn-stratified-k-fold
+/in-L5-axon-image-tmd-proj-cnn-stratified-k-fold
+/in-L5-axon-image-tmd-proj-decision-tree-stratified-k-fold
+/in-L5-axon-image-tmd-proj-xgb-stratified-k-fold
+/in-L6-axon-diagram-tmd-proj-perslay-stratified-k-fold
+/in-L6-axon-graph-proj-gnn-stratified-k-fold
+/in-L6-axon-image-tmd-proj-cnn-stratified-k-fold
+/in-L6-axon-image-tmd-proj-decision-tree-stratified-k-fold
+/in-L6-axon-image-tmd-proj-xgb-stratified-k-fold
