Run DVC stages for IN on alternative neurites (= all, basal): L1 to L6 + MERGED ones

--- a/dvc/training/checkpoints-alt-neurites/.gitignore
+++ b/dvc/training/checkpoints-alt-neurites/.gitignore
@@ -228,3 +228,48 @@
 /in-L5-basal-image-tmd-proj-decision-tree-stratified-k-fold
 /in-L5-basal-image-tmd-rd-xgb-stratified-k-fold
 /in-L5-basal-image-tmd-proj-xgb-stratified-k-fold
+/in-L1-all-diagram-tmd-proj-perslay-stratified-k-fold
+/in-L1-all-graph-proj-gnn-stratified-k-fold
+/in-L1-all-image-tmd-proj-cnn-stratified-k-fold
+/in-L1-all-image-tmd-proj-decision-tree-stratified-k-fold
+/in-L1-all-image-tmd-proj-xgb-stratified-k-fold
+/in-L1-basal-diagram-tmd-proj-perslay-stratified-k-fold
+/in-L1-basal-graph-proj-gnn-stratified-k-fold
+/in-L1-basal-image-tmd-proj-cnn-stratified-k-fold
+/in-L1-basal-image-tmd-proj-decision-tree-stratified-k-fold
+/in-L1-basal-image-tmd-proj-xgb-stratified-k-fold
+/in-L23-all-diagram-tmd-proj-perslay-stratified-k-fold
+/in-L23-all-graph-proj-gnn-stratified-k-fold
+/in-L23-all-image-tmd-proj-cnn-stratified-k-fold
+/in-L23-all-image-tmd-proj-decision-tree-stratified-k-fold
+/in-L23-all-image-tmd-proj-xgb-stratified-k-fold
+/in-L23-basal-diagram-tmd-proj-perslay-stratified-k-fold
+/in-L23-basal-graph-proj-gnn-stratified-k-fold
+/in-L23-basal-image-tmd-proj-cnn-stratified-k-fold
+/in-L23-basal-image-tmd-proj-decision-tree-stratified-k-fold
+/in-L23-basal-image-tmd-proj-xgb-stratified-k-fold
+/in-L4-all-diagram-tmd-proj-perslay-stratified-k-fold
+/in-L4-all-graph-proj-gnn-stratified-k-fold
+/in-L4-all-image-tmd-proj-cnn-stratified-k-fold
+/in-L4-all-image-tmd-proj-decision-tree-stratified-k-fold
+/in-L4-all-image-tmd-proj-xgb-stratified-k-fold
+/in-L4-basal-diagram-tmd-proj-perslay-stratified-k-fold
+/in-L4-basal-graph-proj-gnn-stratified-k-fold
+/in-L4-basal-image-tmd-proj-cnn-stratified-k-fold
+/in-L4-basal-image-tmd-proj-decision-tree-stratified-k-fold
+/in-L4-basal-image-tmd-proj-xgb-stratified-k-fold
+/in-L5-all-diagram-tmd-proj-perslay-stratified-k-fold
+/in-L5-all-graph-proj-gnn-stratified-k-fold
+/in-L5-all-image-tmd-proj-cnn-stratified-k-fold
+/in-L5-all-image-tmd-proj-decision-tree-stratified-k-fold
+/in-L5-all-image-tmd-proj-xgb-stratified-k-fold
+/in-L6-all-diagram-tmd-proj-perslay-stratified-k-fold
+/in-L6-all-graph-proj-gnn-stratified-k-fold
+/in-L6-all-image-tmd-proj-cnn-stratified-k-fold
+/in-L6-all-image-tmd-proj-decision-tree-stratified-k-fold
+/in-L6-all-image-tmd-proj-xgb-stratified-k-fold
+/in-L6-basal-diagram-tmd-proj-perslay-stratified-k-fold
+/in-L6-basal-graph-proj-gnn-stratified-k-fold
+/in-L6-basal-image-tmd-proj-cnn-stratified-k-fold
+/in-L6-basal-image-tmd-proj-decision-tree-stratified-k-fold
+/in-L6-basal-image-tmd-proj-xgb-stratified-k-fold
