--- a/dvc/training/checkpoints-lida-alt-neurites/.gitignore
+++ b/dvc/training/checkpoints-lida-alt-neurites/.gitignore
@@ -61,3 +61,23 @@
 /in-merged-basal-decision-tree-deepwalk-stratified-k-fold
 /in-merged-basal-cnn-tmd-stratified-k-fold
 /in-merged-all-cnn-deepwalk-stratified-k-fold
+/in-merged-all-cnn-tmd-proj-stratified-k-fold
+/in-merged-all-decision-tree-tmd-proj-stratified-k-fold
+/in-merged-all-gnn-morphology-proj-stratified-k-fold
+/in-merged-all-perslay-tmd-proj-stratified-k-fold
+/in-merged-all-xgb-tmd-proj-stratified-k-fold
+/in-merged-basal-cnn-tmd-proj-stratified-k-fold
+/in-merged-basal-decision-tree-tmd-proj-stratified-k-fold
+/in-merged-basal-gnn-morphology-proj-stratified-k-fold
+/in-merged-basal-perslay-tmd-proj-stratified-k-fold
+/in-merged-basal-xgb-tmd-proj-stratified-k-fold
+/in-merged-bc-merged-all-cnn-tmd-proj-stratified-k-fold
+/in-merged-bc-merged-all-decision-tree-tmd-proj-stratified-k-fold
+/in-merged-bc-merged-all-gnn-morphology-proj-stratified-k-fold
+/in-merged-bc-merged-all-perslay-tmd-proj-stratified-k-fold
+/in-merged-bc-merged-all-xgb-tmd-proj-stratified-k-fold
+/in-merged-bc-merged-basal-cnn-tmd-proj-stratified-k-fold
+/in-merged-bc-merged-basal-decision-tree-tmd-proj-stratified-k-fold
+/in-merged-bc-merged-basal-gnn-morphology-proj-stratified-k-fold
+/in-merged-bc-merged-basal-perslay-tmd-proj-stratified-k-fold
+/in-merged-bc-merged-basal-xgb-tmd-proj-stratified-k-fold
