Add stages EnsureNeuritesOutsideSoma and ErrorsReport to MCAR luigi config file

--- a/dvc/data/mcar-luigi.cfg
+++ b/dvc/data/mcar-luigi.cfg
@@ -78,3 +78,11 @@ min_range = 50
 [PlotErrors]
 skip = true
 with_plotly = true
+
+; Fix radius of the soma and cut the root section of neurites if needed.
+[EnsureNeuritesOutsideSoma]
+skip = true
+
+; Save error report for each morphology
+[ErrorsReport]
+skip = false
