Set version for NeuroR and morphology-workflows in setup.cfg and requirements.txt

--- a/setup.cfg
+++ b/setup.cfg
@@ -19,7 +19,9 @@ package_dir =
 packages = find:
 ; No torch wheels for 3.10 available yet (torch==1.10.0)
 ; No libsonata wheels for 3.9 available yet (libsonata==0.1.9)
-; tmd==2.1.0: return type changed for tmd.Topology.methods.tree_to_property_barcode
+; tmd>=2.1.0: return type changed for tmd.Topology.methods.tree_to_property_barcode
+; morphology-workflows>=0.3.0: https://github.com/BlueBrain/morphology-workflows/pull/31
+; NeuroR>=1.6.1: https://github.com/BlueBrain/NeuroR/pull/107, https://github.com/BlueBrain/NeuroR/pull/108
 python_requires = >=3.8,<3.9
 install_requires =
     PyYAML
@@ -35,9 +37,10 @@ install_requires =
     jinja2
     matplotlib
     morphio
-    morphology-workflows>=0.2.0
+    morphology-workflows>=0.3.0
     networkx
     neurom>=3
+    NeuroR>=1.6.1
     neurots
     numpy
     pandas
