--- a/requirements.txt
+++ b/requirements.txt
@@ -11,9 +11,10 @@ imbalanced-learn==0.8.0
 jinja2==2.11.3
 matplotlib==3.5.1
 morphio==3.3.3
-morphology-workflows==0.2.0
+morphology-workflows==0.3.0
 networkx==2.5
 neurom==3.1.0
+NeuroR==1.6.1
 neurots==3.1.1
 numpy==1.21.0
 pandas==1.3.4
