--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 PyYAML==6.0
 captum==0.3.1
+cleanlab==1.0
 click==8.1.2
 dash-bootstrap-components==0.12.0
 dash-core-components==1.15.0
 dash-html-components==1.1.2
 dash==1.19.0
+deepwalk==1.0.3
 dill==0.3.3
 gensim==4.1.0
 imbalanced-learn==0.8.0
