Set min_length_first_section larger than neuror.sanitize._ZERO_LENGTH and remove unsued parameter from luigi config

--- a/dvc/data/mcar-luigi.cfg
+++ b/dvc/data/mcar-luigi.cfg
@@ -24,7 +24,7 @@ nb_processes = 4
 
 ; Detect which neurites are present in the morphology, and add soma if missing.
 [CheckNeurites]
-ensure_soma = true
+min_length_first_section = 0.001
 
 ; Sanitization is done with neuror.sanitize.sanitize and does:
 ;    - ensures it can be loaded with MorphIO
