--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,22 @@
 PyYAML==6.0
 captum==0.3.1
+cleanlab==1.0
 click==8.1.2
 dash-bootstrap-components==0.12.0
 dash-core-components==1.15.0
 dash-html-components==1.1.2
 dash==1.19.0
+deepwalk==1.0.3
 dill==0.3.3
 gensim==4.1.0
 imbalanced-learn==0.8.0
 jinja2==2.11.3
 matplotlib==3.5.1
 morphio==3.3.3
-morphology-workflows==0.2.0
+morphology-workflows==0.3.0
 networkx==2.5
 neurom==3.1.0
+NeuroR==1.6.1
 neurots==3.1.1
 numpy==1.21.0
 pandas==1.3.4
