Justify xgboost version bounds

--- a/setup.cfg
+++ b/setup.cfg
@@ -53,6 +53,10 @@ install_requires =
     torch
     tqdm
     umap-learn
+    ; With the version xgboost==1.2.1 the loading of the DVC checkpoint fails
+    ; torch.load("models/pyramidal_cells/L2/pc_tmd_L2_stratifKFold_xgb_oversampled_results.chk")
+    ; With the version xgboost==1.5.0 there's a different error while running
+    ; dvc repro -fs explain-models@pc_tmd_L2_stratifKFold_xgb_oversampled
     xgboost>1.2.1,<1.5.0
 
 [options.package_data]
