--- a/dvc/params.yaml
+++ b/dvc/params.yaml
@@ -1685,6 +1685,162 @@ features-morphometrics:
     morphometrics-config: morphometrics_config_all.yaml
     dataset-csv: IN_data_BC_merged.csv
     output-features-directory: in-merged-bc-merged/all
+  in-L1-allen:
+    morphometrics-config: morphometrics_config_allen.yaml
+    dataset-csv: interneurons/L1/dataset.csv
+    output-features-directory: in-L1/allen
+  in-L23-allen:
+    morphometrics-config: morphometrics_config_allen.yaml
+    dataset-csv: interneurons/L23/dataset.csv
+    output-features-directory: in-L23/allen
+  in-L4-allen:
+    morphometrics-config: morphometrics_config_allen.yaml
+    dataset-csv: interneurons/L4/dataset.csv
+    output-features-directory: in-L4/allen
+  in-L5-allen:
+    morphometrics-config: morphometrics_config_allen.yaml
+    dataset-csv: interneurons/L5/dataset.csv
+    output-features-directory: in-L5/allen
+  in-L6-allen:
+    morphometrics-config: morphometrics_config_allen.yaml
+    dataset-csv: interneurons/L6/dataset.csv
+    output-features-directory: in-L6/allen
+  pc-L2-allen:
+    morphometrics-config: morphometrics_config_allen.yaml
+    dataset-csv: pyramidal-cells/L2/dataset.csv
+    output-features-directory: pc-L2/allen
+  pc-L3-allen:
+    morphometrics-config: morphometrics_config_allen.yaml
+    dataset-csv: pyramidal-cells/L3/dataset.csv
+    output-features-directory: pc-L3/allen
+  pc-L4-allen:
+    morphometrics-config: morphometrics_config_allen.yaml
+    dataset-csv: pyramidal-cells/L4/dataset.csv
+    output-features-directory: pc-L4/allen
+  pc-L5-allen:
+    morphometrics-config: morphometrics_config_allen.yaml
+    dataset-csv: pyramidal-cells/L5/dataset.csv
+    output-features-directory: pc-L5/allen
+  pc-L6-allen:
+    morphometrics-config: morphometrics_config_allen.yaml
+    dataset-csv: pyramidal-cells/L6/dataset.csv
+    output-features-directory: pc-L6/allen
+  janelia-L5-allen:
+    morphometrics-config: morphometrics_config_allen.yaml
+    dataset-csv: janelia/L5/dataset.csv
+    output-features-directory: janelia-L5/allen
+  in-merged-allen:
+    morphometrics-config: morphometrics_config_allen.yaml
+    dataset-csv: IN_data.csv
+    output-features-directory: in-merged/allen
+  in-merged-bc-merged-allen:
+    morphometrics-config: morphometrics_config_allen.yaml
+    dataset-csv: IN_data_BC_merged.csv
+    output-features-directory: in-merged-bc-merged/allen
+  in-L1-lauturns:
+    morphometrics-config: morphometrics_config_lauturns.yaml
+    dataset-csv: interneurons/L1/dataset.csv
+    output-features-directory: in-L1/lauturns
+  in-L23-lauturns:
+    morphometrics-config: morphometrics_config_lauturns.yaml
+    dataset-csv: interneurons/L23/dataset.csv
+    output-features-directory: in-L23/lauturns
+  in-L4-lauturns:
+    morphometrics-config: morphometrics_config_lauturns.yaml
+    dataset-csv: interneurons/L4/dataset.csv
+    output-features-directory: in-L4/lauturns
+  in-L5-lauturns:
+    morphometrics-config: morphometrics_config_lauturns.yaml
+    dataset-csv: interneurons/L5/dataset.csv
+    output-features-directory: in-L5/lauturns
+  in-L6-lauturns:
+    morphometrics-config: morphometrics_config_lauturns.yaml
+    dataset-csv: interneurons/L6/dataset.csv
+    output-features-directory: in-L6/lauturns
+  pc-L2-lauturns:
+    morphometrics-config: morphometrics_config_lauturns.yaml
+    dataset-csv: pyramidal-cells/L2/dataset.csv
+    output-features-directory: pc-L2/lauturns
+  pc-L3-lauturns:
+    morphometrics-config: morphometrics_config_lauturns.yaml
+    dataset-csv: pyramidal-cells/L3/dataset.csv
+    output-features-directory: pc-L3/lauturns
+  pc-L4-lauturns:
+    morphometrics-config: morphometrics_config_lauturns.yaml
+    dataset-csv: pyramidal-cells/L4/dataset.csv
+    output-features-directory: pc-L4/lauturns
+  pc-L5-lauturns:
+    morphometrics-config: morphometrics_config_lauturns.yaml
+    dataset-csv: pyramidal-cells/L5/dataset.csv
+    output-features-directory: pc-L5/lauturns
+  pc-L6-lauturns:
+    morphometrics-config: morphometrics_config_lauturns.yaml
+    dataset-csv: pyramidal-cells/L6/dataset.csv
+    output-features-directory: pc-L6/lauturns
+  janelia-L5-lauturns:
+    morphometrics-config: morphometrics_config_lauturns.yaml
+    dataset-csv: janelia/L5/dataset.csv
+    output-features-directory: janelia-L5/lauturns
+  in-merged-lauturns:
+    morphometrics-config: morphometrics_config_lauturns.yaml
+    dataset-csv: IN_data.csv
+    output-features-directory: in-merged/lauturns
+  in-merged-bc-merged-lauturns:
+    morphometrics-config: morphometrics_config_lauturns.yaml
+    dataset-csv: IN_data_BC_merged.csv
+    output-features-directory: in-merged-bc-merged/lauturns
+  in-L1-petilla:
+    morphometrics-config: morphometrics_config_petilla.yaml
+    dataset-csv: interneurons/L1/dataset.csv
+    output-features-directory: in-L1/petilla
+  in-L23-petilla:
+    morphometrics-config: morphometrics_config_petilla.yaml
+    dataset-csv: interneurons/L23/dataset.csv
+    output-features-directory: in-L23/petilla
+  in-L4-petilla:
+    morphometrics-config: morphometrics_config_petilla.yaml
+    dataset-csv: interneurons/L4/dataset.csv
+    output-features-directory: in-L4/petilla
+  in-L5-petilla:
+    morphometrics-config: morphometrics_config_petilla.yaml
+    dataset-csv: interneurons/L5/dataset.csv
+    output-features-directory: in-L5/petilla
+  in-L6-petilla:
+    morphometrics-config: morphometrics_config_petilla.yaml
+    dataset-csv: interneurons/L6/dataset.csv
+    output-features-directory: in-L6/petilla
+  pc-L2-petilla:
+    morphometrics-config: morphometrics_config_petilla.yaml
+    dataset-csv: pyramidal-cells/L2/dataset.csv
+    output-features-directory: pc-L2/petilla
+  pc-L3-petilla:
+    morphometrics-config: morphometrics_config_petilla.yaml
+    dataset-csv: pyramidal-cells/L3/dataset.csv
+    output-features-directory: pc-L3/petilla
+  pc-L4-petilla:
+    morphometrics-config: morphometrics_config_petilla.yaml
+    dataset-csv: pyramidal-cells/L4/dataset.csv
+    output-features-directory: pc-L4/petilla
+  pc-L5-petilla:
+    morphometrics-config: morphometrics_config_petilla.yaml
+    dataset-csv: pyramidal-cells/L5/dataset.csv
+    output-features-directory: pc-L5/petilla
+  pc-L6-petilla:
+    morphometrics-config: morphometrics_config_petilla.yaml
+    dataset-csv: pyramidal-cells/L6/dataset.csv
+    output-features-directory: pc-L6/petilla
+  janelia-L5-petilla:
+    morphometrics-config: morphometrics_config_petilla.yaml
+    dataset-csv: janelia/L5/dataset.csv
+    output-features-directory: janelia-L5/petilla
+  in-merged-petilla:
+    morphometrics-config: morphometrics_config_petilla.yaml
+    dataset-csv: IN_data.csv
+    output-features-directory: in-merged/petilla
+  in-merged-bc-merged-petilla:
+    morphometrics-config: morphometrics_config_petilla.yaml
+    dataset-csv: IN_data_BC_merged.csv
+    output-features-directory: in-merged-bc-merged/petilla
 
 training-morphometrics:
   in-L1-all-morphometrics-xgb-stratified-k-fold:
