--- a/dvc/params.yaml
+++ b/dvc/params.yaml
@@ -1895,3 +1895,159 @@ training-morphometrics:
     morphometrics-features-dir: ./extract-features-morphometrics/in-merged-bc-merged/all/features.csv
     model-config: training/configs/model-xgb.yaml
     splitter-config: training/configs/splitter-stratified-k-fold.yaml
+  in-L1-petilla-morphometrics-xgb-stratified-k-fold:
+    morphometrics-features-dir: ./extract-features-morphometrics/in-L1/petilla/features.csv
+    model-config: training/configs/model-xgb.yaml
+    splitter-config: training/configs/splitter-stratified-k-fold.yaml
+  in-L23-petilla-morphometrics-xgb-stratified-k-fold:
+    morphometrics-features-dir: ./extract-features-morphometrics/in-L23/petilla/features.csv
+    model-config: training/configs/model-xgb.yaml
+    splitter-config: training/configs/splitter-stratified-k-fold.yaml
+  in-L4-petilla-morphometrics-xgb-stratified-k-fold:
+    morphometrics-features-dir: ./extract-features-morphometrics/in-L4/petilla/features.csv
+    model-config: training/configs/model-xgb.yaml
+    splitter-config: training/configs/splitter-stratified-k-fold.yaml
+  in-L5-petilla-morphometrics-xgb-stratified-k-fold:
+    morphometrics-features-dir: ./extract-features-morphometrics/in-L5/petilla/features.csv
+    model-config: training/configs/model-xgb.yaml
+    splitter-config: training/configs/splitter-stratified-k-fold.yaml
+  in-L6-petilla-morphometrics-xgb-stratified-k-fold:
+    morphometrics-features-dir: ./extract-features-morphometrics/in-L6/petilla/features.csv
+    model-config: training/configs/model-xgb.yaml
+    splitter-config: training/configs/splitter-stratified-k-fold.yaml
+  janelia-L5-petilla-morphometrics-xgb-stratified-k-fold:
+    morphometrics-features-dir: ./extract-features-morphometrics/janelia-L5/petilla/features.csv
+    model-config: training/configs/model-xgb.yaml
+    splitter-config: training/configs/splitter-stratified-k-fold.yaml
+  pc-L2-petilla-morphometrics-xgb-stratified-k-fold:
+    morphometrics-features-dir: ./extract-features-morphometrics/pc-L2/petilla/features.csv
+    model-config: training/configs/model-xgb.yaml
+    splitter-config: training/configs/splitter-stratified-k-fold.yaml
+  pc-L3-petilla-morphometrics-xgb-stratified-k-fold:
+    morphometrics-features-dir: ./extract-features-morphometrics/pc-L3/petilla/features.csv
+    model-config: training/configs/model-xgb.yaml
+    splitter-config: training/configs/splitter-stratified-k-fold.yaml
+  pc-L4-petilla-morphometrics-xgb-stratified-k-fold:
+    morphometrics-features-dir: ./extract-features-morphometrics/pc-L4/petilla/features.csv
+    model-config: training/configs/model-xgb.yaml
+    splitter-config: training/configs/splitter-stratified-k-fold.yaml
+  pc-L5-petilla-morphometrics-xgb-stratified-k-fold:
+    morphometrics-features-dir: ./extract-features-morphometrics/pc-L5/petilla/features.csv
+    model-config: training/configs/model-xgb.yaml
+    splitter-config: training/configs/splitter-stratified-k-fold.yaml
+  pc-L6-petilla-morphometrics-xgb-stratified-k-fold:
+    morphometrics-features-dir: ./extract-features-morphometrics/pc-L6/petilla/features.csv
+    model-config: training/configs/model-xgb.yaml
+    splitter-config: training/configs/splitter-stratified-k-fold.yaml
+  in-merged-petilla-morphometrics-xgb-stratified-k-fold:
+    morphometrics-features-dir: ./extract-features-morphometrics/in-merged/petilla/features.csv
+    model-config: training/configs/model-xgb.yaml
+    splitter-config: training/configs/splitter-stratified-k-fold.yaml
+  in-merged-bc-merged-petilla-morphometrics-xgb-stratified-k-fold:
+    morphometrics-features-dir: ./extract-features-morphometrics/in-merged-bc-merged/petilla/features.csv
+    model-config: training/configs/model-xgb.yaml
+    splitter-config: training/configs/splitter-stratified-k-fold.yaml
+  in-L1-allen-morphometrics-xgb-stratified-k-fold:
+    morphometrics-features-dir: ./extract-features-morphometrics/in-L1/allen/features.csv
+    model-config: training/configs/model-xgb.yaml
+    splitter-config: training/configs/splitter-stratified-k-fold.yaml
+  in-L23-allen-morphometrics-xgb-stratified-k-fold:
+    morphometrics-features-dir: ./extract-features-morphometrics/in-L23/allen/features.csv
+    model-config: training/configs/model-xgb.yaml
+    splitter-config: training/configs/splitter-stratified-k-fold.yaml
+  in-L4-allen-morphometrics-xgb-stratified-k-fold:
+    morphometrics-features-dir: ./extract-features-morphometrics/in-L4/allen/features.csv
+    model-config: training/configs/model-xgb.yaml
+    splitter-config: training/configs/splitter-stratified-k-fold.yaml
+  in-L5-allen-morphometrics-xgb-stratified-k-fold:
+    morphometrics-features-dir: ./extract-features-morphometrics/in-L5/allen/features.csv
+    model-config: training/configs/model-xgb.yaml
+    splitter-config: training/configs/splitter-stratified-k-fold.yaml
+  in-L6-allen-morphometrics-xgb-stratified-k-fold:
+    morphometrics-features-dir: ./extract-features-morphometrics/in-L6/allen/features.csv
+    model-config: training/configs/model-xgb.yaml
+    splitter-config: training/configs/splitter-stratified-k-fold.yaml
+  janelia-L5-allen-morphometrics-xgb-stratified-k-fold:
+    morphometrics-features-dir: ./extract-features-morphometrics/janelia-L5/allen/features.csv
+    model-config: training/configs/model-xgb.yaml
+    splitter-config: training/configs/splitter-stratified-k-fold.yaml
+  pc-L2-allen-morphometrics-xgb-stratified-k-fold:
+    morphometrics-features-dir: ./extract-features-morphometrics/pc-L2/allen/features.csv
+    model-config: training/configs/model-xgb.yaml
+    splitter-config: training/configs/splitter-stratified-k-fold.yaml
+  pc-L3-allen-morphometrics-xgb-stratified-k-fold:
+    morphometrics-features-dir: ./extract-features-morphometrics/pc-L3/allen/features.csv
+    model-config: training/configs/model-xgb.yaml
+    splitter-config: training/configs/splitter-stratified-k-fold.yaml
+  pc-L4-allen-morphometrics-xgb-stratified-k-fold:
+    morphometrics-features-dir: ./extract-features-morphometrics/pc-L4/allen/features.csv
+    model-config: training/configs/model-xgb.yaml
+    splitter-config: training/configs/splitter-stratified-k-fold.yaml
+  pc-L5-allen-morphometrics-xgb-stratified-k-fold:
+    morphometrics-features-dir: ./extract-features-morphometrics/pc-L5/allen/features.csv
+    model-config: training/configs/model-xgb.yaml
+    splitter-config: training/configs/splitter-stratified-k-fold.yaml
+  pc-L6-allen-morphometrics-xgb-stratified-k-fold:
+    morphometrics-features-dir: ./extract-features-morphometrics/pc-L6/allen/features.csv
+    model-config: training/configs/model-xgb.yaml
+    splitter-config: training/configs/splitter-stratified-k-fold.yaml
+  in-merged-allen-morphometrics-xgb-stratified-k-fold:
+    morphometrics-features-dir: ./extract-features-morphometrics/in-merged/allen/features.csv
+    model-config: training/configs/model-xgb.yaml
+    splitter-config: training/configs/splitter-stratified-k-fold.yaml
+  in-merged-bc-merged-allen-morphometrics-xgb-stratified-k-fold:
+    morphometrics-features-dir: ./extract-features-morphometrics/in-merged-bc-merged/allen/features.csv
+    model-config: training/configs/model-xgb.yaml
+    splitter-config: training/configs/splitter-stratified-k-fold.yaml
+  in-L1-lauturns-morphometrics-xgb-stratified-k-fold:
+    morphometrics-features-dir: ./extract-features-morphometrics/in-L1/lauturns/features.csv
+    model-config: training/configs/model-xgb.yaml
+    splitter-config: training/configs/splitter-stratified-k-fold.yaml
+  in-L23-lauturns-morphometrics-xgb-stratified-k-fold:
+    morphometrics-features-dir: ./extract-features-morphometrics/in-L23/lauturns/features.csv
+    model-config: training/configs/model-xgb.yaml
+    splitter-config: training/configs/splitter-stratified-k-fold.yaml
+  in-L4-lauturns-morphometrics-xgb-stratified-k-fold:
+    morphometrics-features-dir: ./extract-features-morphometrics/in-L4/lauturns/features.csv
+    model-config: training/configs/model-xgb.yaml
+    splitter-config: training/configs/splitter-stratified-k-fold.yaml
+  in-L5-lauturns-morphometrics-xgb-stratified-k-fold:
+    morphometrics-features-dir: ./extract-features-morphometrics/in-L5/lauturns/features.csv
+    model-config: training/configs/model-xgb.yaml
+    splitter-config: training/configs/splitter-stratified-k-fold.yaml
+  in-L6-lauturns-morphometrics-xgb-stratified-k-fold:
+    morphometrics-features-dir: ./extract-features-morphometrics/in-L6/lauturns/features.csv
+    model-config: training/configs/model-xgb.yaml
+    splitter-config: training/configs/splitter-stratified-k-fold.yaml
+  janelia-L5-lauturns-morphometrics-xgb-stratified-k-fold:
+    morphometrics-features-dir: ./extract-features-morphometrics/janelia-L5/lauturns/features.csv
+    model-config: training/configs/model-xgb.yaml
+    splitter-config: training/configs/splitter-stratified-k-fold.yaml
+  pc-L2-lauturns-morphometrics-xgb-stratified-k-fold:
+    morphometrics-features-dir: ./extract-features-morphometrics/pc-L2/lauturns/features.csv
+    model-config: training/configs/model-xgb.yaml
+    splitter-config: training/configs/splitter-stratified-k-fold.yaml
+  pc-L3-lauturns-morphometrics-xgb-stratified-k-fold:
+    morphometrics-features-dir: ./extract-features-morphometrics/pc-L3/lauturns/features.csv
+    model-config: training/configs/model-xgb.yaml
+    splitter-config: training/configs/splitter-stratified-k-fold.yaml
+  pc-L4-lauturns-morphometrics-xgb-stratified-k-fold:
+    morphometrics-features-dir: ./extract-features-morphometrics/pc-L4/lauturns/features.csv
+    model-config: training/configs/model-xgb.yaml
+    splitter-config: training/configs/splitter-stratified-k-fold.yaml
+  pc-L5-lauturns-morphometrics-xgb-stratified-k-fold:
+    morphometrics-features-dir: ./extract-features-morphometrics/pc-L5/lauturns/features.csv
+    model-config: training/configs/model-xgb.yaml
+    splitter-config: training/configs/splitter-stratified-k-fold.yaml
+  pc-L6-lauturns-morphometrics-xgb-stratified-k-fold:
+    morphometrics-features-dir: ./extract-features-morphometrics/pc-L6/lauturns/features.csv
+    model-config: training/configs/model-xgb.yaml
+    splitter-config: training/configs/splitter-stratified-k-fold.yaml
+  in-merged-lauturns-morphometrics-xgb-stratified-k-fold:
+    morphometrics-features-dir: ./extract-features-morphometrics/in-merged/lauturns/features.csv
+    model-config: training/configs/model-xgb.yaml
+    splitter-config: training/configs/splitter-stratified-k-fold.yaml
+  in-merged-bc-merged-lauturns-morphometrics-xgb-stratified-k-fold:
+    morphometrics-features-dir: ./extract-features-morphometrics/in-merged-bc-merged/lauturns/features.csv
+    model-config: training/configs/model-xgb.yaml
+    splitter-config: training/configs/splitter-stratified-k-fold.yaml
